tests/api/reference/negative/03-unknown-field.asm
packed struct Pair {
    low: u8
    high: u8
}

const pair: Pair = Pair {
    missing: 1
}
